# InjectUtils

./: .clang-format  .gitignore  CHANGES.md  CMakeLists.txt  CMakePresets.json  README.md  REPL_SINK_MODES.md  REPL_USAGE_EXAMPLE.md  inject.ps1  modify.ps1  pkgs.ps1  push.ps1  restore.ps1  run.ps1  start.ps1  test_repl_output.lua  日志系统使用说明.md
hooks/: CMakeLists.txt
hooks/art/: CMakeLists.txt  art_hook.cpp  art_hook.h  art_test.cpp  art_test.h  art_utils.cpp  art_utils.h  struct.h
hooks/java/: CMakeLists.txt
hooks/java/backend/Pine/: Pine.cpp  Pine.h
hooks/java/backend/Pine/src/: jni_bridge.cpp  jni_bridge.h  pine.cpp
hooks/java/backend/YAHFA/: CMakeLists.txt
hooks/java/backend/YAHFA/dlfunc/: CMakeLists.txt
hooks/java/backend/YAHFA/src/: HookMain.c  HookMain.h  YAHFA_ALL.h  utils.c  utils.h
hooks/java/front/: Jave_Hook.h
hooks/native/: CMakeLists.txt
hooks/native/backend/SandHook/: CMakeLists.txt
hooks/native/backend/SandHook/nativehook/: CMakeLists.txt
hooks/native/backend/dobby/: CMakeLists.txt
hooks/native/backend/dobby/Dobby/: .gitignore  CMakeLists.txt
hooks/native/backend/frida/: CMakeLists.txt
hooks/native/backend/frida/example/: test_frida.c  test_frida.h  test_frida_pp.cpp  test_frida_pp.h
hooks/native/backend/frida/gumpp/: backtracer.cpp  gumpp.hpp  interceptor.cpp  invocationcontext.hpp  invocationlistener.cpp  invocationlistener.hpp  objectwrapper.hpp  podwrapper.hpp  returnaddress.cpp  runtime.cpp  runtime.hpp  string.hpp  symbolutil.cpp
hooks/native/backend/shadowhook/: CMakeLists.txt
hooks/native/backend/xhook/: CMakeLists.txt
hooks/native/front/: HookManager.h  HookTemplate.h  InsCheck.cpp  InsCheck.h
hooks/native/front/HookImpl/: DobbyHooker.h  FridaHooker.h  InlineHooker.h  ShadowHooker.h
hooks/native/front/HookImpl/HookBase/: HookBase.hpp  HookLog.h  HookerImpl.cpp  template.h
hooks/native/front/LambdaTram/: LambdaTram.hpp
libs/: CMakeLists.txt
libs/LIEF/: .gitignore  CMakeLists.txt
libs/QBDI/: .gitignore  CMakeLists.txt
libs/QBDI/arm32/include/QBDI/: Config.h  Version.h
libs/QBDI/arm64/include/QBDI/: Config.h  Version.h
libs/RTTR/src/rttr/: CMakeLists.txt
libs/Unity/: CMakeLists.txt  UnityResolve.hpp
libs/Unity/MonoString/: CMakeLists.txt
libs/boost-1_78_0/: .gitignore  CMakeLists.txt  git.txt
libs/boost-1_78_0/include/boost/: crc.hpp
libs/boost-1_78_0/include/boost/proto/: operators.hpp
libs/boost-1_78_0/include/boost/range/: iterator_range_core.hpp
libs/boost-1_78_0/include/boost/type_traits/: intrinsics.hpp
libs/boost-1_78_0/include/boost/xpressive/: sub_match.hpp
libs/boost-1_85_0/: CMakeLists.txt
libs/boost-1_85_0/lib/cmake/boost_atomic-1.85.0/: boost_atomic-config.cmake  libboost_atomic-variant-clang-darwin-mt-a64-1_85-static.cmake
libs/boost-1_85_0/lib/cmake/boost_chrono-1.85.0/: boost_chrono-config.cmake  libboost_chrono-variant-clang-darwin-mt-a64-1_85-static.cmake
libs/boost-1_85_0/lib/cmake/boost_date_time-1.85.0/: boost_date_time-config.cmake  libboost_date_time-variant-clang-darwin-mt-a64-1_85-static.cmake
libs/boost-1_85_0/lib/cmake/boost_filesystem-1.85.0/: boost_filesystem-config.cmake  libboost_filesystem-variant-clang-darwin-mt-a64-1_85-static.cmake
libs/boost-1_85_0/lib/cmake/boost_headers-1.85.0/: boost_headers-config.cmake
libs/boost-1_85_0/lib/cmake/boost_locale-1.85.0/: boost_locale-config.cmake  libboost_locale-variant-clang-darwin-mt-a64-1_85-static.cmake
libs/boost-1_85_0/lib/cmake/boost_random-1.85.0/: boost_random-config.cmake  libboost_random-variant-clang-darwin-mt-a64-1_85-static.cmake
libs/boost-1_85_0/lib/cmake/boost_system-1.85.0/: boost_system-config.cmake  libboost_system-variant-clang-darwin-mt-a64-1_85-static.cmake
libs/boost-1_85_0/lib/cmake/boost_thread-1.85.0/: boost_thread-config.cmake  libboost_thread-variant-clang-darwin-mt-a64-1_85-static.cmake
libs/capstone/: CMakeLists.txt
libs/chat/: CMakeLists.txt
libs/chat/liboai/liboai/: CMakeLists.txt
libs/chat/liboai/liboai/components/: audio.cpp  azure.cpp  chat.cpp  completions.cpp  edits.cpp  embeddings.cpp  files.cpp  fine_tunes.cpp  images.cpp  models.cpp  moderations.cpp
libs/chat/liboai/liboai/core/: authorization.cpp  netimpl.cpp  response.cpp
libs/chat/liboai/liboai/include/: liboai.h
libs/crc/: CMakeLists.txt
libs/crc/CRCpp/: CMakeLists.txt
libs/crc/crc32c/: CMakeLists.txt
libs/debugbreak/: ref.txt
libs/fmt/: .gitignore
libs/injector/: CMakeLists.txt
libs/injector/AndKittyInjector/: CMakeLists.txt
libs/injector/AndKittyInjector/AndKittyInjector/: CMakeLists.txt
libs/injector/AndKittyInjector/KittyMemoryEx/KittyMemoryEx/: KittyTrace.cpp  KittyTrace.hpp
libs/keystone/: CMakeLists.txt
libs/network/: CMakeLists.txt
libs/network/GmSSL/: .gitignore  CMakeLists.txt  INSTALL.md
libs/network/GmSSL/demos/src/: demo_cert_gen.c  demo_cert_sign.c
libs/network/GmSSL/prebuilt/arm64-v8a/: aeadtest  aestest  asn1test  base64test  block_ciphertest  chacha20test  cmstest  demo_sm2_encrypt  demo_sm2_keygen  demo_sm2_keyparse  demo_sm2_private_key  demo_sm2_private_key_parse  demo_sm2_sign  (+47 more)
libs/network/cpr/: .gitignore  CMakeLists.txt
libs/network/curlcpp/: CMakeLists.txt
libs/replxx/: .gitignore
libs/replxx/include/: replxx_export.h
libs/tools/: CMakeLists.txt
libs/tools/Crash/: Crash.cpp
libs/tools/Syscall/: mSyscall.h
libs/xdl/: CMakeLists.txt  xdl.c  xdl_iterate.c  xdl_iterate.h  xdl_linker.h  xdl_lzma.c
libs/xdl/include/: xdl.h
libs/xorstr/include/: str_obfuscator.hpp  xorstr.hpp  xorstr_1.h
lua/: CMakeLists.txt  LuaLibrary.h
lua/LuaJIT/src/: lua.h
lua/LuaJIT/src/host/: minilua.c
lua/lua-5.4.6/: lauxlib.h
plugins/android/: CMakeLists.txt  pull_libart.ps1
plugins/android/work/: CMakeLists.txt  art_test.cpp  art_test.h
scripts/patch/cpp/: CMakeLists.txt
shell/: CMakeLists.txt  ShellLoader.hpp  main.cpp
shell/bin2h/: bin2h.c  build.ps1
shell/libs/: .gitignore
shell/libs/xdl/: xdl_linker.c  xdl_util.c  xdl_util.h
tools/: CMakeLists.txt  extract_lua_functions.py
tools/Crash/: Crash.h
tools/Syscall/: mSyscall.cpp
(+237 files in other folders)
